--- a/contacto.html
+++ b/contacto.html
@@ -54,8 +54,7 @@
         <section class="margen" id="contacto">
             <h1> Contacto</h1>
             <p>¿Querés probar una clase?
-                ¡Completá el formulario y te contactamos! </p>
-
+                ¡Completá el formulario y te contactamos! También podés contactarte al +54 9 221 592-6666. </p>
             <div class="row">
                 <div class="col-lg-6">
 
