--- a/horarios.html
+++ b/horarios.html
@@ -58,20 +58,20 @@
 
                     <h2> Horarios</h2>
                     <ul class="cuadraditos">
-                        <li>Lunes: de 12 a 20 hs. </li>
-                        <li>Martes: de 8 a 12 hs y de 15 a 20 hs.</li>
+                        <li>Lunes: de 13 a 20 hs. </li>
+                        <li>Martes: de 8 a 11 hs y de 14 a 20 hs.</li>
                         <li>Miércoles: de 13 a 20 hs. </li>
-                        <li>Jueves: de 8 a 12 hs y de 14 a 20 hs.</li>
+                        <li>Jueves: de 8 a 11 hs y de 14 a 20 hs.</li>
                         <li>Viernes: de 8 a 12 hs.</li>
                     </ul>
 
                 </div>
                 <div class="col">
-                    <h2> Tarifas</h2>
+                    <h2> Tarifas Enero 2023.</h2>
                     <ul class="cuadraditos">
-                        <li>1 clase semanal: $3.000 mensuales</li>
-                        <li>2 clases semanales: $4.500 mensuales</li>
-                        <li>3 clases semanales: $5.500 mensuales</li>
+                        <li>1 clase semanal: $3.500 mensuales</li>
+                        <li>2 clases semanales: $4.900 mensuales</li>
+                        <li>3 clases semanales: $6.000 mensuales</li>
                     </ul>
                 </div>
             </div>
