--- a/contacto.html
+++ b/contacto.html
@@ -64,7 +64,8 @@
 
                 </div>
                 <div class="col">
-                    <form>
+                    <form action="https://formspree.io/f/myyayaov"
+                    method="POST">
                         <div class="mb-3">
                             <label for="nombre" class="form-label"></label>
                             <input type="text" class="form-control" id="nombre" required placeholder="Nombre"
