Correción text-area

--- a/contacto.html
+++ b/contacto.html
@@ -86,7 +86,7 @@
                         <div class="mb-3">
                             <label for="comentarios" class="form-label"></label>
                             <textarea class="form-control" id="comentarios" rows="3"
-                                placeholder="Dejanos tu consulta"></textarea>
+                                 name="comentarios" placeholder="Dejanos tu consulta"></textarea>
                         </div>
                         <button type="submit" class="btn btn-outline-secondary">Enviar</button>
                     </form>
