--- a/contacto.html
+++ b/contacto.html
@@ -64,7 +64,7 @@
 
                 </div>
                 <div class="col">
-                    <form action="https://formspree.io/f/myyayaov"
+                    <form action="https://formspree.io/f/myyayaov name="formulario_contacto netlify"
                     method="POST">
                         <div class="mb-3">
                             <label for="nombre" class="form-label"></label>
