--- a/contacto.html
+++ b/contacto.html
@@ -59,7 +59,7 @@
                 <div class="col-lg-6">
 
                     <img src="images\studio.jpg" class="img-fluid rounded float-start rounded float-end"
-                        alt="foto estudio">
+                        alt="foto estudio" loading="lazy">
 
 
                 </div>
