--- a/pilates.html
+++ b/pilates.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="col">
                     <img src="images\DSC_0673.JPG" class="img-fluid rounded float-start rounded float-end"
-                        alt="mujer elongando">
+                        alt="mujer elongando" loading="lazy">
                 </div>
             </div>
 
@@ -104,7 +104,7 @@
 
                 <div class="col">
                     <img src="images\DSC_0587.JPG" class="img-fluid rounded float-start rounded float-end"
-                        alt="mujer elongando">
+                        alt="mujer elongando" loading="lazy">
                 </div>
             </div>
         </section>
