--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col padding_extra">
                     <img src="images\DSC_0482.JPG" class="img-fluid rounded float-start rounded float-end"
-                        alt="mujer elongando">
+                        alt="mujer elongando" loading="lazy">
                 </div>
             </div>
         </section>
