--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header id="header">
-        <nav class="navbar navbar-expand-sm bg-light">
+        <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
                 <a class="navbar-brand" href="index.html"><img class="logo me-auto" src="images\lorena-pilates-logo.png"
                         width=70px height=auto alt="logo"></a>
