--- a/horarios.html
+++ b/horarios.html
@@ -18,7 +18,7 @@
 <body>
     <header id="header">
 
-        <nav class="navbar navbar-expand-sm bg-light fixed-top">
+        <nav class="navbar navbar-expand-lg bg-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="index.html"><img class="logo me-auto" src="images\lorena-pilates-logo.png"
                         width=70px height=auto alt="logo"></a>
