--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <header id="header">
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
-                <a class="navbar-brand" href="index.html"><img class="logo me-auto" src="images\lorena-pilates-logo.png"
-                        width=70px height=auto alt="logo"></a>
+                <a class="navbar-brand" href="index.html">LORENA PILATES</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,9 +48,9 @@
         </nav>
 
         <section class="kenburns-top-left container" id="home">
-            <h1>Lorena Pilates</h1>
-            <h2>Pilates Reformer</h2>
-            <h3>La Plata</h3>
+            <h1>Pilates Reformer</h1>
+            <h2>La Plata</h2>
+            
             <a type="button" class="btn btn-outline-secondary float-start" href="sobre_nosotros.html">Conocenos</a>
         </section>
     </header>
