--- a/contacto.html
+++ b/contacto.html
@@ -20,8 +20,7 @@
 
         <nav class="navbar navbar-expand-lg bg-light fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="index.html"><img class="logo me-auto" src="images\lorena-pilates-logo.png"
-                        width=70px height=auto alt="logo"></a>
+                <a class="navbar-brand" href="index.html">LORENA PILATES</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
