--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -85,7 +85,7 @@
             <div class="footer__copyright__text">
                 <span class="mb-md-0 text-muted align-items-left">© 2023 Todos los derechos reservados. Made by Gordini
                     with
-                    <span><i class="bi bi-heart"></i> </span></span>
+                    <span><i class="bi bi-heart-fill"></i> </span></span>
 
             </div>
         </div>
