--- a/horarios.html
+++ b/horarios.html
@@ -66,7 +66,7 @@
 
                 </div>
                 <div class="col">
-                    <h2> Tarifas Enero 2023.</h2>
+                    <h2> Tarifas Abril 2023.</h2>
                     <ul class="cuadraditos">
                         <li>1 clase semanal: $4.000 mensuales</li>
                         <li>2 clases semanales: $6.500 mensuales</li>
