--- a/horarios.html
+++ b/horarios.html
@@ -37,9 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="pilates.html">Pilates</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="horarios.html">Horarios y Tarifas</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
